set(IMAGE_FILES 
    hand.png
    image.png
    layer.png
    magnify_region.png
    note.png
    rel11.png
    rel1n.png
    relnm.png
    routine.png
    rubber.png
    table.png
    view.png
    zoom_in.png
    zoom_out.png
)

install(FILES ${IMAGE_FILES} DESTINATION ${WB_PACKAGE_SHARED_DIR}/images)
