set(IMAGE_FILES 
    hand.png
    image.png
    layer.png
    magnify_region.png
    note.png
    rel11.png
    rel1n.png
    relnm.png
    routine.png
    rubber.png
    table.png
    view.png
    zoom_in.png
    zoom_out.png
    hand_dark.png
    image_dark.png
    layer_dark.png
    magnify_region_dark.png
    note_dark.png
    rel11_dark.png
    rel1n_dark.png
    relnm_dark.png
    routine_dark.png
    rubber_dark.png
    table_dark.png
    view_dark.png
    zoom_in_dark.png
    zoom_out_dark.png
)

install(FILES ${IMAGE_FILES} DESTINATION ${WB_PACKAGE_SHARED_DIR}/images)
