set(IMAGE_FILES 
    WB_Home.png
    WB_Home_mac.png
    wb_close.png
    wb_doc_model.png
    wb_doc_sql.png
    sidebar_migration.png
    sidebar_wbx.png
    sidebar_wb.png
    sidebar_modeling.png
    wb_tile_folder.png
    wb_tile_folder_mini.png
    wb_tile_manage.png
    wb_tile_more.png
    wb_tile_mouseover.png
    wb_tile_mouseover_2.png
    wb_tile_network.png
    wb_tile_number.png
    wb_tile_open.png
    wb_tile_page-down.png
    wb_tile_page-up.png
    wb_tile_plus.png
    wb_tile_sakila.png
    wb_tile_schema.png
    wb_tile_time.png
    wb_tile_user.png
    wb_x_tile.png
    wb_x_js_tile.png
    wb_x_py_tile.png
)

install(FILES ${IMAGE_FILES} DESTINATION ${WB_PACKAGE_SHARED_DIR}/images)
